--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,5 @@
 	url = https://github.com/m4ll0k/Infoga
 [submodule "Programmi/droopescan"]
 	url = https://github.com/droope/droopescan
+[submodule "Programmi/dnsrecon"]
+	url = https://github.com/darkoperator/dnsrecon
