--- a/webmva.csproj
+++ b/webmva.csproj
@@ -12,11 +12,11 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Microsoft.Composition" Version="1.0.30" ExcludeAssets="All" />
+    <PackageReference Include="Shark.PdfConvert" Version="1.0.3" />
     <PackageReference Include="System.Composition" Version="1.0.31" />
     <PackageReference Include="PdfSharp" Version="1.50.4845-RC2a" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.4.0" />
-    <PackageReference Include="TuesPechkin" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
