Spostato install.sh e prima bozza config

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "Porta": 80,
+  "CartellaReport": "wwwroot/Report",
+  "Logging": true,
+  "CartellaLog": "/var/log/webmva"
 }
