--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,10 @@
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
-    }
+    },
+      "Porta": 80,
+      "CartellaReport": "wwwroot/Report",
+      "Logging": true,
+      "CartellaLog": "/var/log/webmva"
   }
 }
